<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PublishActivity">

        <TextView
            android:id="@+id/publish_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publicar_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type_animal_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/publish_title" />

        <EditText
            android:id="@+id/animal_type"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:autofillHints="Animal Type"
            android:ems="10"
            android:hint="@string/animal_type"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_text"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/breed_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/breed_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animal_type" />

        <EditText
            android:id="@+id/breed"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/breed"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breed_text"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/info_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breed" />

        <EditText
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/info"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/ubi_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zone_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ubi_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubi_text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/ubi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_text_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/ubi_text" />

        <TextView
            android:id="@+id/img_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/img_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubi_button" />

        <Button
            android:id="@+id/browse_button"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:text="@string/browser_button_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_uploaded"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/publish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publsh_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_publish" />


        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/browse_button"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/perdido_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/perdido_text" />

            <RadioButton
                android:id="@+id/encont_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/encontrado_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/publish_button"
            app:layout_constraintEnd_toStartOf="@+id/date_publish"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
            app:layout_constraintVertical_bias="0.652" />

        <EditText
            android:id="@+id/date_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <ImageView
            android:id="@+id/image_uploaded"
            android:layout_width="0dp"
            android:layout_height="103dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>