<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnuncioActivity">

    <TextView
        android:id="@+id/title_anuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ad_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_anuncio" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/imageViewer"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_date" />

    <TextView
        android:id="@+id/type_animal_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/animal_type_ad"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewer" />

    <TextView
        android:id="@+id/breed_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/breed_ad"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_animal_ad" />

    <TextView
        android:id="@+id/location_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location_ad"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed_ad" />

    <TextView
        android:id="@+id/info_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_ad"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_ad" />

    <TextView
        android:id="@+id/contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_contact_button_ad"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_ad" />

</androidx.constraintlayout.widget.ConstraintLayout>